--- a/Module_Installation.ipynb
+++ b/Module_Installation.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install pandas numpy seaborn matplotlib scipy scikit-learn keras "
+    "pip install pandas numpy seaborn matplotlib scipy scikit-learn keras statsmodels"
    ]
   }
  ],
